--- a/Language/Python/00-Introduction.ipynb
+++ b/Language/Python/00-Introduction.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "12"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "125"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "2.3333333333333335"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "'Surya Prakash Giri'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,6 +562,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 > 2 # 1 'is less than' 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 > 3 # 5 'is greater than' 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9 >= 7 # 9 'is greater than or equal to' 7"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -577,7 +637,7 @@
     }
    ],
    "source": [
-    "1 > 2 # 1 'is less than' 2"
+    "4 <= 1 # 4 'is less than or equal to' 1"
    ]
   },
   {
@@ -597,7 +657,7 @@
     }
    ],
    "source": [
-    "5 > 3 # 5 'is greater than' 3"
+    "8 == 8.0 # 8 'is equal to' 8.0"
    ]
   },
   {
@@ -608,70 +668,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "9 >= 7 # 9 'is greater than or equal to' 7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "4 <= 1 # 4 'is less than or equal to' 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "8 == 8.0 # 8 'is equal to' 8.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -780,32 +780,48 @@
      "output_type": "stream",
      "text": [
       "name1: Akash\n",
+      "<class 'str'>\n",
       "name2: Surya Prakash\n",
+      "<class 'str'>\n",
       "para1: This is\n",
       "an example\n",
       "of paragraph.\n",
+      "<class 'str'>\n",
       "num1: 12\n",
-      "float1: 3.4\n"
+      "<class 'int'>\n",
+      "float1: 3.4\n",
+      "<class 'float'>\n"
      ]
     }
    ],
    "source": [
     "# is use for single line comments\n",
+    "\n",
     "''' This is \n",
     "a muti-line \n",
     "comments'''\n",
+    "\n",
     "name1 = \"Akash\" # name -> 'Akash'\n",
-    "print('name1:',name1)\n",
+    "print('name1:',name1) # printing the value of name1 \n",
+    "print(type(name1))\n",
+    "\n",
     "name2 = 'Surya Prakash'\n",
-    "print('name2:',name2)\n",
+    "print('name2:',name2) # printing the value of name2\n",
+    "print(type(name2))\n",
+    "\n",
     "para1 = '''This is\n",
     "an example\n",
     "of paragraph.'''\n",
-    "print('para1:',para1)\n",
+    "print('para1:',para1) # printing the value of para1 \n",
+    "print(type(para1))\n",
+    "\n",
     "num1 = 12\n",
-    "print('num1:',num1)\n",
+    "print('num1:',num1) # printing the value of num1 \n",
+    "print(type(num1))\n",
+    "\n",
     "float1 = 3.4\n",
-    "print('float1:',float1)"
+    "print('float1:',float1) # printing the value of float1 \n",
+    "print(type(float1))"
    ]
   },
   {
@@ -813,6 +829,28 @@
    "metadata": {},
    "source": [
     "####    Note- name = 'Suryaprakash' and name = \"Suryaprakash\" are same. we can create string variables either by using single or double quotes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This tutorial is intended to be a public resource. As such, if you see any glaring inaccuracies or if a critical topic is missing, please feel free to point it out or (preferably) submit a pull request to improve the tutorial. Also, we are always looking to improve the scope of this article. For anything feel free to mail us @ colearninglounge@gmail.com**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The author of this article is Surya Prakash Giri.\n",
+    "You can follow him on [Github](https://github.com/Akashgiri963), [Linkedin](https://www.linkedin.com/in/surya-prakash-giri-18024a195), [Instagram](https://instagram.com/suryaprakash_giri)."
    ]
   }
  ],
