--- a/Language/Python/00-Introduction.ipynb
+++ b/Language/Python/00-Introduction.ipynb
@@ -850,7 +850,7 @@
    "metadata": {},
    "source": [
     "### The author of this article is Surya Prakash Giri.\n",
-    "You can follow him on [Github](https://gihub.com/Akashgiri963), [Linkedin](https://www.linkedin.com/in/surya-prakash-giri-18024a195), [Instagram](https://instagram.com/suryaprakash_giri)."
+    "You can follow him on [Github](https://github.com/Akashgiri963), [Linkedin](https://www.linkedin.com/in/surya-prakash-giri-18024a195), [Instagram](https://instagram.com/suryaprakash_giri)."
    ]
   }
  ],
